# ChangeLog for dev-lisp/sbcl
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.130 2007/10/02 18:28:54 pylon Exp $

  02 Oct 2007; Lars Weiler <pylon@gentoo.org> sbcl-1.0.9.ebuild:
  stable ppc, bug #194519

  02 Oct 2007; Christian Faulhammer <opfer@gentoo.org> sbcl-1.0.9.ebuild:
  stable x86, bug 194519

  02 Oct 2007; Ferris McCormick <fmccor@gentoo.org> sbcl-1.0.9.ebuild:
  Sparc stable --- Bug #194519 --- seems fine.

  27 Sep 2007; Marijn Schouten <hkBst@gentoo.org> sbcl-1.0.4.ebuild,
  sbcl-1.0.5.ebuild, sbcl-1.0.6.ebuild, sbcl-1.0.6-r1.ebuild,
  sbcl-1.0.6-r2.ebuild, sbcl-1.0.7-r2.ebuild, sbcl-1.0.8.ebuild,
  sbcl-1.0.9.ebuild:
  undo addition of cobalt ARCHITECTURE (bug 185956) use flag

*sbcl-1.0.10 (27 Sep 2007)

  27 Sep 2007; Marijn Schouten <hkBst@gentoo.org> +sbcl-1.0.10.ebuild:
  bump

  30 Aug 2007; Stuart Longland <redhatter@gentoo.org> sbcl-1.0.4.ebuild,
  sbcl-1.0.5.ebuild, sbcl-1.0.6.ebuild, sbcl-1.0.6-r1.ebuild,
  sbcl-1.0.6-r2.ebuild, sbcl-1.0.7-r2.ebuild, sbcl-1.0.8.ebuild,
  sbcl-1.0.9.ebuild:
  Added 'cobalt' to IUSE for endianness-detection on MIPS. This is still a bit
  hackish for my taste, will talk with lisp herd and nut out a better fix
  later.

*sbcl-1.0.9 (27 Aug 2007)

  27 Aug 2007; Marijn Schouten <hkBst@gentoo.org> +sbcl-1.0.9.ebuild:
  bump to 1.0.9

  07 Aug 2007; Marijn Schouten <hkBst@gentoo.org> sbcl-1.0.7-r2.ebuild,
  sbcl-1.0.8.ebuild:
  add graphviz dep, bug 187305

  25 Jul 2007; Marijn Schouten <hkBst@gentoo.org> -sbcl-0.9.4.ebuild,
  -sbcl-0.9.17.ebuild, -sbcl-0.9.18.ebuild, -sbcl-1.0.ebuild,
  -sbcl-1.0.1.ebuild:
  remove old versions

*sbcl-1.0.8 (25 Jul 2007)

  25 Jul 2007; Marijn Schouten <hkBst@gentoo.org> +sbcl-1.0.8.ebuild:
  add 1.0.8 and remove that ldb doesn't work on ppc

*sbcl-1.0.7-r2 (20 Jul 2007)

  20 Jul 2007; Marijn Schouten <hkBst@gentoo.org> +sbcl-1.0.7-r2.ebuild: