@@ -1,6 +1,9 @@
 # ChangeLog for dev-lisp/sbcl
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.130 2007/10/02 18:28:54 pylon Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.131 2007/10/18 17:01:12 hkbst Exp $
+
+  18 Oct 2007; Marijn Schouten <hkBst@gentoo.org> sbcl-1.0.10.ebuild:
+  small fix for running your own dumped images
 
   02 Oct 2007; Lars Weiler <pylon@gentoo.org> sbcl-1.0.9.ebuild:
   stable ppc, bug #194519
